Fixes spacing on bio pages

--- a/app/_scss/includes/_metainfo_people.scss
+++ b/app/_scss/includes/_metainfo_people.scss
@@ -30,7 +30,7 @@
 			}
 
 			p {
-				margin-bottom: 3.2rem;
+				margin-bottom: 1.2rem;
 			}
 		}
 	}
@@ -51,6 +51,7 @@
 			.key, .value {
 				padding: 3%;
 				display: inline-block;
+				white-space: nowrap;
 			}
 
 			.key {
